[gd_scene load_steps=2 format=3 uid="uid://bk4fxq02w66kg"]

[ext_resource type="Script" path="res://Assets/Items/Spawnable Items/spawn_banana.gd" id="1_3efx2"]

[node name="spawn_banana" type="Node2D"]
script = ExtResource("1_3efx2")

[node name="Timer" type="Timer" parent="."]
wait_time = 80.0
autostart = true

[node name="spawn_area" type="ReferenceRect" parent="."]
offset_right = 64.0
offset_bottom = 64.0

[node name="banana_spawn" type="Node2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
